updating sol for 56